--- a/static/css/main.css
+++ b/static/css/main.css
@@ -57,6 +57,44 @@ body {
     pointer-events: none;
 }
 
+.navigation ul li a {
+    position: relative;
+    display: block;
+    width: 100%;
+    display: flex;
+    text-decoration: none;
+    color: var(--black);
+    font-weight: 500;
+}
+
+.navigation ul li:hover a {
+    color: var(--black);
+}
+
+.navigation ul li a .icon {
+    position: relative;
+    display: block;
+    min-width: 60px;
+    height: 60px;
+    line-height: 70px;
+    text-align: center;
+}
+
+.navigation ul li a ion-icon {
+    font-size: 1.75em;
+}
+
+.navigation ul li a .title {
+    position: relative;
+    display: block;
+    padding: 0 10px;
+    height: 60px;
+    line-height: 53px;
+    text-align: start;
+    white-space: normal;
+}
+
+
 
 /* general */
 .content {
