remove stuff from index, make side bar toggable

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -35,6 +35,10 @@ body {
     overflow: hidden;
 }
 
+.navigation.active {
+    width: 75px;
+}
+
 .navigation ul {
     position: absolute;
     top: 0;
@@ -101,6 +105,11 @@ body {
     min-height: 100vh;
     background: var(--white);
     transition: 0.5s;
+}
+
+.main.active {
+    width: calc(100% - 80px);
+    left: 85px;
 }
 
 .topbar {
