--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
 
             <li>
                 <a href="#">
-                    <span class="icon"><ion-icon name="log-out-outline"></ion-icon></span>
+                    <span class="icon"><ion-icon name="information-outline"></ion-icon></span>
                     <span class="title">Help</span>
                 </a>
             </li>
@@ -59,6 +59,35 @@
             </li>
         </ul>
     </div>
+
+    <div class="main">
+        <div class="topbar">
+            <div class="toggle">
+                <ion-icon name="menu-outline"></ion-icon>
+            </div>
+            <div class="search">
+                <label>
+                    <input type="text" placeholder="Search here">
+                    <ion-icon name="search-outline"></ion-icon>
+                </label>
+            </div>
+            <div class="user">
+                <ion-icon name="person-circle-outline"></ion-icon>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        // menu toggle
+        let toggle = document.querySelector('.toggle');
+        let navigation = document.querySelector('.navigation');
+        let main = document.querySelector('.main');
+
+        toggle.onclick = function(){
+            navigation.classList.toggle('active');
+            main.classList.toggle('active');
+        }
+    </script>
 
     <script>
         // add hovered class in selected list item
