--- a/templates/index.html
+++ b/templates/index.html
@@ -5,5 +5,47 @@
 {% endblock %}
 
 {% block body %}
+<!-- cards -->
+<div class="cardBox">
+    <div class="card">
+        <div>
+            <div class="numbers">47</div>
+            <div class="cardName">Forms</div>
+        </div>
+        <div class="iconBox">
+            <ion-icon name="documents-outline"></ion-icon>
+        </div>
+    </div>
+    
+    <div class="card">
+        <div>
+            <div class="numbers">6</div>
+            <div class="cardName">Units</div>
+        </div>
+        <div class="iconBox">
+            <ion-icon name="file-tray-full-outline"></ion-icon>
+        </div>
+    </div>
+
+    <div class="card">
+        <div>
+            <div class="numbers">3</div>
+            <div class="cardName">Active Logins</div>
+        </div>
+        <div class="iconBox">
+            <ion-icon name="eye-outline"></ion-icon>
+        </div>
+    </div>
+
+    <div class="card">
+        <div>
+            <div class="numbers">1</div>
+            <div class="cardName">DB Active</div>
+        </div>
+        <div class="iconBox">
+            <ion-icon name="bulb-outline"></ion-icon>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
