--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
             </li>
 
             <li>
-                <a href="#">
+                <a href="{{ url_for('routes_hosts.index') }}">
                     <span class="icon"><ion-icon name="planet-outline"></ion-icon></span>
                     <span class="title">Dashboard</span>
                 </a>
