--- a/templates/base.html
+++ b/templates/base.html
@@ -65,12 +65,12 @@
             <div class="toggle">
                 <ion-icon name="menu-outline"></ion-icon>
             </div>
-            <div class="search">
+            <!-- <div class="search">
                 <label>
                     <input type="text" placeholder="Search here">
                     <ion-icon name="search-outline"></ion-icon>
                 </label>
-            </div>
+            </div> -->
             <div class="user">
                 <ion-icon name="person-circle-outline"></ion-icon>
             </div>
