add link to profile page, fix css incompatibilities

--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,9 @@
                 </label>
             </div> -->
             <div class="user">
-                <ion-icon name="person-circle-outline"></ion-icon>
+                <a href="{{ url_for('routes_auth.profile') }}">
+                    <span><ion-icon name="person-circle-outline"></ion-icon></span>
+                </a>
             </div>
         </div>
         
