--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-.card {
+.profile-card {
     width: 400px;
     height: 300px;
     background-color: rgb(217, 222, 233);
@@ -15,14 +15,14 @@
     margin: 20px;
 }
 
-.title {
+.profile-title {
     font-weight: 700;
     font-size: 36px;
     text-align: center;
     margin: 10px 0;
 }
 
-.container {
+.profile-container {
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -31,11 +31,11 @@
     font-size: 26px;
 }
 
-.container > * {
+.profile-container > * {
     margin: 13px 0;
 }
 
-.logout-a {
+.profile-logout-a {
     display: block;
     text-align: center;
     text-decoration: none;
@@ -46,16 +46,16 @@
     border-radius: 10px;
 }
 
-.logout-a:visited{
+.profile-logout-a:visited{
     color: black;
 }
 
-.logout-a:hover {
+.profile-logout-a:hover {
     opacity: 0.8;
     text-decoration: none;
 }
 
-.user-info {
+.profile-user-info {
     font-size: 20px;
     background-color: hsl(225, 100%, 98%);
     padding: 25px;
