--- a/templates/base.html
+++ b/templates/base.html
@@ -31,9 +31,9 @@
             </li>
 
             <li>
-                <a href="#">
-                    <span class="icon"><ion-icon name="people-outline"></ion-icon></span>
-                    <span class="title">Users</span>
+                <a href="/upload_csv">
+                    <span class="icon"><ion-icon name="arrow-down-outline"></ion-icon></span>
+                    <span class="title">Upload / Download</span>
                 </a>
             </li>
 
