--- a/templates/index.html
+++ b/templates/index.html
@@ -19,10 +19,10 @@
         </div>
         <div>
             <a href="{{ url_for('routes_hosts.form') }}">
-                <span class="iconBox"><ion-icon name="documents-outline"></ion-icon></span><br></span>
+                <span class="iconBox"><ion-icon name="documents-outline"></ion-icon><br></span>
             </a>
             <a href="{{ url_for('routes_hosts.form_new') }}">
-                <span class="iconBox"><ion-icon name="add-outline"></ion-icon></span><br></span>
+                <span class="iconBox"><ion-icon name="add-outline"></ion-icon></span>
             </a>
         </div>
     </div>
