--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-	
+
     {% block head %}{% endblock %}
 </head>
 
@@ -65,58 +65,16 @@
             <div class="toggle">
                 <ion-icon name="menu-outline"></ion-icon>
             </div>
-            <!-- <div class="search">
-                <label>
-                    <input type="text" placeholder="Search here">
-                    <ion-icon name="search-outline"></ion-icon>
-                </label>
-            </div> -->
             <div class="user">
                 <a href="{{ url_for('routes_auth.profile') }}">
                     <span><ion-icon name="person-circle-outline"></ion-icon></span>
                 </a>
             </div>
         </div>
-        
         {% block body %}{% endblock %}
-
     </div>
 
-    <script>
-        // menu toggle
-        let toggle = document.querySelector('.toggle');
-        let navigation = document.querySelector('.navigation');
-        let main = document.querySelector('.main');
-
-        toggle.onclick = function(){
-            navigation.classList.toggle('active');
-            main.classList.toggle('active');
-        }
-    </script>
-
-    <script>
-        // add hovered class in selected list item
-        let list = document.querySelectorAll('.navigation li');
-        function activeLink(){
-            list.forEach((item) =>
-            item.classList.remove('hovered'));
-            this.classList.add('hovered');
-        }
-        list.forEach((item) =>
-        item.addEventListener('mouseover',activeLink))
-    </script>
-    <!-- <ul>
-        <li><a class="active" href="{{ url_for('routes_hosts.index') }}">Main</a></li>
-        <li><a href="{{ url_for('routes_units.unit') }}">Org. Units</a></li>
-        <li><a href="{{ url_for('routes_auth.profile') }}">Profile</a></li>
-        <li style="float: right;"><a href="/upload_csv">Upload CSV</a></ri>
-        <li style="float: right;"><a href="/unit_dump">Dump Units</a></ri>
-        <li style="float: right;"><a href="/dump">Dump Hosts</a></ri>
-        <li style="float: right;"><a href="/unit_new">Add Unit</a></ri>
-        <li style="float: right;"><a href="/form">Add Host</a></ri>
-    </ul> -->
-
+    <script src="static/js/menu_toggle.js"></script>
+    <script src="static/js/hovered_class.js"></script>
 </body>
-<br/><br/><br/><br/>
 </html>
-
