use real forms number

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 <div class="cardBox">
     <div class="card">
         <div>
-            <div class="numbers">47</div>
+            <div class="numbers">{{ forms_num }}</div>
             <div class="cardName">Forms</div>
         </div>
         <div>
