add active session table

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
     
     <div class="card">
         <div>
-            <div class="numbers">6</div>
+            <div class="numbers">{{ units_num }}</div>
             <div class="cardName">Units</div>
         </div>
         <div>
@@ -44,7 +44,7 @@
 
     <div class="card">
         <div>
-            <div class="numbers">3</div>
+            <div class="numbers">{{ all_sessions }}</div>
             <div class="cardName">Active Logins</div>
         </div>
         <div class="iconBox">
