add db status checker, remove deprecated flask_env

--- a/templates/index.html
+++ b/templates/index.html
@@ -54,8 +54,8 @@
 
     <div class="card">
         <div>
-            <div class="numbers">1</div>
-            <div class="cardName">DB Active</div>
+            <div class="numbers">{{ db_status }}</div>
+            <div class="cardName">DB Status</div>
         </div>
         <div class="iconBox">
             <ion-icon name="bulb-outline"></ion-icon>
