fix bug where a new form wont be added

--- a/templates/form_new.html
+++ b/templates/form_new.html
@@ -14,7 +14,7 @@
 <div class="content">
     <h1>Create New Form</h1><hr/>
     
-    <form action="/form" name="theForm" method="POST">
+    <form action="/form_new" name="theForm" method="POST">
 
         <section class="form-inline">
             <label>System's Name:</label>
