--- a/templates/form_new.html
+++ b/templates/form_new.html
@@ -2,6 +2,9 @@
 
 {% block head %}
 <title>Form</title>
+<script src="https://cdn.jsdelivr.net/npm/@yaireo/tagify"></script>
+<script src="https://cdn.jsdelivr.net/npm/@yaireo/tagify/dist/tagify.polyfills.min.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/@yaireo/tagify/dist/tagify.css" rel="stylesheet" type="text/css" />
 {% endblock %}
 
 {% block body %}
@@ -9,7 +12,6 @@
 <script src="static/js/add_ip.js"></script>
 <script type="text/javascript" script id="ch" hosts="{{hosts}}" src="static/js/check_host.js"></script>
 <script type="text/javascript" script id="gc" unit_data="{{unit_data}}" src="static/js/get_unit.js"></script>
-
 
 <div class="content">
     <h1>Create New Form</h1><hr/>
@@ -41,14 +43,22 @@
         <section class="form-inline">
             <label>IP address (format: 1.1.1.1/24)</label>
             <input type="text" name="ip" value="" required/>
-                <div class="input-wrapper">
-                    <div>
-                        <label>Extra IP Addresses</label>
-                        <a href="javascript:void(0);" class="add-input" title="Add input">
-                            <button type="button">Add</button>
-                        </a>
-                    </div>
+        </section><br/>
+
+        <!-- <section class="form-inline">
+            <div class="input-wrapper">
+                <div>
+                    <label>Extra IP Addresses</label>
+                    <a href="javascript:void(0);" class="add-input" title="Add input">
+                        <button type="button">Add</button>
+                    </a>
                 </div>
+            </div>
+        </section> -->
+        
+        <section class="form-inline">
+            <label>Extra IPs</label>
+            <input class='tagify' value=''>
         </section><br/>
 
         <section class="form-inline">
@@ -79,4 +89,6 @@
 
     </form>
 </div>
+<script type="text/javascript" script id="tg" src="static/js/tagify.js"></script>
+
 {% endblock %}
