--- a/static/css/main.css
+++ b/static/css/main.css
@@ -378,11 +378,11 @@ hr {
 
 /* Custom extra IPs */  
 .tagify {
-    --tags-border-color: silver;
-    --tag-bg: black;
+    --tags-border-color: silver !important;
 
-    vertical-align: middle;
     margin: 5px 10px 5px 5px;
-    padding: 10px;
-    border: none;
+}
+
+.tagify__input {
+    min-width: 350px !important;
 }
