save extra IP addresses into database

--- a/templates/form_new.html
+++ b/templates/form_new.html
@@ -58,7 +58,7 @@
         
         <section class="form-inline">
             <label>Extra IPs</label>
-            <input class='tagify' value=''>
+            <input class='tagify' name='extra_ips' value=''>
         </section><br/>
 
         <section class="form-inline">
