--- a/templates/form_new.html
+++ b/templates/form_new.html
@@ -9,8 +9,8 @@
 
 {% block body %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script type="text/javascript" script id="ch" hosts="{{hosts}}" src="static/js/check_host.js"></script>
-<script type="text/javascript" script id="gc" unit_data="{{unit_data}}" src="static/js/get_unit.js"></script>
+<script type="text/javascript" script id="ch" hosts="{{hosts}}" src="{{ url_for('static', filename='js/check_host.js') }}"></script>
+<script type="text/javascript" script id="gc" unit_data="{{unit_data}}" src="{{ url_for('static', filename='js/get_unit.js') }}"></script>
 
 <div class="content">
     <h1>Create New Form</h1><hr/>
@@ -77,6 +77,6 @@
 
     </form>
 </div>
-<script type="text/javascript" script id="tg" src="static/js/tagify.js"></script>
+<script type="text/javascript" script id="tg" src="{{ url_for('static', filename='js/tagify.js') }}"></script>
 
 {% endblock %}
